--- a/apps/admin/view/default/content/slide.html
+++ b/apps/admin/view/default/content/slide.html
@@ -55,10 +55,10 @@
                      <label class="layui-form-label">分组</label>
                      <div class="layui-input-block">
                      	<select name="gid" >	
-                     		<option value="" >新增分组</option>
                      		{foreach $gids(key,value)}
 	                			<option value="[value]" >分组[value]</option>
 	                		{/foreach}
+	                		<option value="" >自动新增分组</option>
 	                	</select>
                      </div>
                 </div>
@@ -126,10 +126,11 @@
 	  			<div class="layui-form-item">
                      <label class="layui-form-label">分组</label>
                      <div class="layui-input-block">
-                     	<select name="gid" lay-verify="required">	
+                     	<select name="gid">	
 	                		{foreach $gids(key,value)}
 	                			<option value="[value]" {if([$slide->gid]==$value)}selected{/if}>分组[value]</option>
 	                		{/foreach}
+	                		<option value="" >自动新增分组</option>
 	                	</select>
                      </div>
                 </div>
