--- a/apps/admin/view/default/content/content.html
+++ b/apps/admin/view/default/content/content.html
@@ -26,6 +26,8 @@
 	                     	<a class="layui-btn layui-btn-primary"  href="{url./admin/Content/index/mcode/'.get('mcode').'}">清除搜索</a>
 	                     </div>
 	                </div>
+	                
+	               
                 </form>
                 
 	  	   		<form action="{url./admin/Content/mod}" method="post" id="contentForm" name="contentForm" class="layui-form" onkeydown="if(event.keyCode==13) return false;">
@@ -129,28 +131,46 @@
 		            </table>
 			       
 			        
+			        <div class="layui-inline" style="float:right">
+			     		<select lay-filter="tourl" class="page-select" >
+							<option value="" selected="">每页显示数量</option>
+							<option value="{url./admin/Content/index/mcode/'.get('mcode').'/pagesize/20}" {if(get('pagesize')==20)}selected{/if}>20条/页</option>
+							<option value="{url./admin/Content/index/mcode/'.get('mcode').'/pagesize/30}" {if(get('pagesize')==30)}selected{/if}>30条/页</option>
+							<option value="{url./admin/Content/index/mcode/'.get('mcode').'/pagesize/50}" {if(get('pagesize')==50)}selected{/if}>50条/页</option>
+							<option value="{url./admin/Content/index/mcode/'.get('mcode').'/pagesize/60}" {if(get('pagesize')==60)}selected{/if}>60条/页</option>
+							<option value="{url./admin/Content/index/mcode/'.get('mcode').'/pagesize/100}" {if(get('pagesize')==100)}selected{/if}>100条/页</option>
+							<option value="{url./admin/Content/index/mcode/'.get('mcode').'/pagesize/150}" {if(get('pagesize')==150)}selected{/if}>150条/页</option>
+							<option value="{url./admin/Content/index/mcode/'.get('mcode').'/pagesize/200}" {if(get('pagesize')==200)}selected{/if}>200条/页</option>
+						</select>
+					</div>
+						
 			        <div class="layui-input-inline">
 				     	 <select name="scode">
-	                        	<option value="">请选择目标栏目</option>
+	                        	<option value="">请选择移动/复制到栏目</option>
 	                             {$search_select}
 	                     </select>
                     </div>
-                    {if(check_level('mod'))}
-                    <button type="submit" name="submit" value="copy" class="layui-btn">复制</button>
-                    <button type="submit" name="submit" value="move" class="layui-btn">移动</button>
-                    {/if}
-                    {if(check_level('del'))}
-			     	<button type="submit" name="submit" onclick="return setDelAction();" class="layui-btn">批量删除</button>
-			     	{/if}
-			     	{if(check_level('mod'))}
-			     	<button type="submit" name="submit" value="sorting" class="layui-btn">保存排序</button>
-			     	{if([$baidu_zz_token])}
-			     		<button type="submit" name="submit" value="baiduzz" class="layui-btn">百度推送</button>
-			     	{/if}
-			     	{if([$baidu_xzh_appid])}
-			     		<button type="submit" name="submit" value="baiduxzh" class="layui-btn">熊掌号推送</button>
-			     	{/if}
-			     	 {/if}
+                    
+                    <div class="layui-btn-group">
+	                    {if(check_level('mod'))}
+	                    	<button type="submit" name="submit" value="copy" class="layui-btn layui-btn-sm">复制</button>
+	                    	<button type="submit" name="submit" value="move" class="layui-btn layui-btn-sm">移动</button>
+	                    {/if}
+	                    
+	                    {if(check_level('del'))}
+				     		<button type="submit" name="submit" onclick="return setDelAction();" class="layui-btn layui-btn-sm">批量删除</button>
+				     	{/if}
+				     	
+				     	{if(check_level('mod'))}
+				     		<button type="submit" name="submit" value="sorting" class="layui-btn layui-btn-sm">保存排序</button>
+					     	{if([$baidu_zz_token])}
+					     		<button type="submit" name="submit" value="baiduzz" class="layui-btn layui-btn-sm">百度推送</button>
+					     	{/if}
+					     	{if([$baidu_xzh_appid])}
+					     		<button type="submit" name="submit" value="baiduxzh" class="layui-btn layui-btn-sm">熊掌号推送</button>
+					     	{/if}
+				     	 {/if}
+			     	 </div>
 			     	<script>
 			     		function setDelAction(){
 			     			document.contentForm.action = "{url./admin/Content/del}"; 
@@ -158,7 +178,10 @@
 			     		}
 			     	</script>
 			     	
-			     	<div class="page">{$pagebar}</div>
+			     	<div class="page">
+			     		{$pagebar}
+			     		
+			     	</div>
 			      </form> 
 	  	   </div>
 	  	   
@@ -823,6 +846,7 @@ function saveOrder() {
 	}).get();
 	$("input[name=pics]").val(data.join(","))
 };
+
 </script>
 <script type="text/javascript" src="{APP_THEME_DIR}/js/jscolor.js"></script>
 
