--- a/apps/admin/view/default/content/slide.html
+++ b/apps/admin/view/default/content/slide.html
@@ -43,7 +43,7 @@
                     {/foreach}
                 </tbody>
             </table>
-            <button type="submit" name="submit" value="sorting" class="layui-btn">保存排序</button>
+            <button type="submit" name="submit" value="sorting" class="layui-btn layui-btn-sm">保存排序</button>
             </form> 
             <div class="page">{$pagebar}</div>
 	  	</div>
