--- a/apps/admin/view/default/system/home.html
+++ b/apps/admin/view/default/system/home.html
@@ -153,7 +153,7 @@
 	                <tr>
 	                    <th>友情贡献者</th>
 	                    <td>
-	                    	感谢晨星傲月、富派仙尊、紫雨、远方的回忆、果爸、Jiang、江苏360搜索推广陈杭、书生会武术、六水水炸了、极点科技-周锦程、金科一生所爱、骑着蚂蚁的大象等网友的积极贡献；
+	                    	感谢晨星傲月、富派仙尊、紫雨、远方的回忆、果爸、Jiang、陈杭、书生会武术、六水水炸了、极点科技-周锦程、金科一生所爱、骑着蚂蚁的大象、没皮的小芒果、zhpw35等网友的积极贡献；
 	                    	感谢交流群各网友的大力支持；
 	                    	感谢LayUI提供的前端框架；
 	                    	感谢星梦开发团队的日夜奋斗。
@@ -167,7 +167,7 @@
 <script>
 $.ajax({
     type: 'GET',
-	url: 'https://www.pbootcms.com/index.php?p=/upgrade/check&version={APP_VERSION}.{RELEASE_TIME}.{$revise}&branch={$branch}',
+	url: 'https://www.pbootcms.com/index.php?p=/upgrade/check&version={APP_VERSION}.{RELEASE_TIME}.{$revise}&branch={$branch}&snuser={$snuser}&site={$site}',
 	dataType: 'json',
 	success: function (response, status) {
 		 if(response.code==1){
